--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
            <span class="header-text"><strong>Men Category</strong></span>
             <table class="single-box" id="Men">
             <thead>
-               <tr> <td><img src="images/Men_jeans.jpg" width="190" height="220" alt="NotFound" /></td></tr>    
+               <tr> <td><img src="images/Men_Jeans.jpg" width="190" height="220" alt="NotFound" /></td></tr>    
                  <tr> <td><img src="images/Men_Blazer.jpg" width="190" height="220" alt="NotFound" /></td></tr>
                  <tr>
                 <td><img src="images/Men_Jackets.jpg" width="190" height="220" alt="NotFound" /></td>
